[gd_scene load_steps=3 format=2]

[ext_resource path="res://Nodes/UI/DeathScreen.gd" type="Script" id=1]
[ext_resource path="res://Assets/Sprites/game-title.png" type="Texture" id=2]

[node name="DeathScreen" type="Node"]
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.239216, 0.27451, 0.419608, 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_top = 40
custom_constants/margin_bottom = 40

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 220.0
margin_top = 40.0
margin_right = 420.0
margin_bottom = 164.0
size_flags_horizontal = 4
size_flags_vertical = 2
custom_constants/separation = 16

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer"]
margin_right = 200.0
margin_bottom = 40.0
texture = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_left = 28.0
margin_top = 56.0
margin_right = 171.0
margin_bottom = 124.0
size_flags_horizontal = 4

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_right = 143.0
margin_bottom = 20.0
text = "Retry"

[node name="Button2" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 24.0
margin_right = 143.0
margin_bottom = 44.0
text = "Return to Title Menu"

[node name="Button3" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 48.0
margin_right = 143.0
margin_bottom = 68.0
text = "Quit"

[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/Button3" to="." method="_on_Button3_pressed"]
